# kanshi-rs

./: .gitignore  Cargo.toml  README.md
src/: executer.rs  kanshi.rs  lib.rs  log.rs
